# WRF_correction

./: .gitignore  README.md  pyproject.toml  requirements.txt
save/wrf_July/fig/: results_full.csv
scripts/: train.py
src/wrfera/: __init__.py  config.py  data.py  eval.py  utils.py
src/wrfera/model/: ST_UNet.py  TS_UNet.py  __init__.py
src/wrfera/viz/: draw_hourly.py  draw_maps.py  inference.py  plot_config.py
